--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,7 @@
 cmake_minimum_required(VERSION 3.5.1)
 
+project(ConcurrencyErrorBenchmarkSuite)
+set(ConcurrencyErrorBenchmarkSuite_VERSION_MAJOR 0)
+set(ConcurrencyErrorBenchmarkSuite_VERSION_MINOR 1)
+
+add_subdirectory(OpenMP)
