--- a/OpenMP/CMakeLists.txt
+++ b/OpenMP/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(CMAKE_C_COMPILER clang)
 set(GROUP_NAME OpenMP)
-include(FindOpenMP)
+#include(FindOpenMP)
+find_package(OpenMP REQUIRED)
 if(OpenMP_FOUND)
-    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}})
+    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS})
 endif()
 #file(GLOB SUBDIR_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR})
 macro(listSubDir RESULT ROOT_PATH)
@@ -18,8 +19,6 @@ endmacro()
 set(SUBDIR_LIST "")
 listSubDir(SUBDIR_LIST ${CMAKE_CURRENT_SOURCE_DIR})
 foreach(DIR ${SUBDIR_LIST})
-    message("${DIR}")
     file(GLOB SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${DIR}/*.c)   
-    message(${SRCS})
     add_executable(${DIR} ${SRCS})
 endforeach()
