--- a/OpenMP/CMakeLists.txt
+++ b/OpenMP/CMakeLists.txt
@@ -3,9 +3,12 @@ set(GROUP_NAME OpenMP)
 #include(FindOpenMP)
 find_package(OpenMP REQUIRED)
 if(OpenMP_FOUND)
-    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 endif()
 #file(GLOB SUBDIR_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR})
+set(TARGET_OPTION "-fopenmp-targets=nvptx64-nvidia-cuda")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TARGET_OPTION}")
+
 macro(listSubDir RESULT ROOT_PATH)
     file(GLOB FILES RELATIVE ${ROOT_PATH} *)
     set(${RESULT} "")
