update project setting

--- a/OpenMP/CMakeLists.txt
+++ b/OpenMP/CMakeLists.txt
@@ -2,6 +2,7 @@ set(CMAKE_C_COMPILER clang)
 set(GROUP_NAME OpenMP)
 #include(FindOpenMP)
 find_package(OpenMP REQUIRED)
+find_package(CUDA)
 if(OpenMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 endif()
