--- a/OpenMP/CMakeLists.txt
+++ b/OpenMP/CMakeLists.txt
@@ -2,10 +2,14 @@ set(CMAKE_C_COMPILER clang)
 set(GROUP_NAME OpenMP)
 #include(FindOpenMP)
 find_package(OpenMP REQUIRED)
+find_package(CUDA REQUIRED)
 if(OpenMP_FOUND)
-    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 endif()
 #file(GLOB SUBDIR_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR})
+set(TARGET_OPTION "-fopenmp-targets=nvptx64-nvidia-cuda --cuda-path=${CUDA_TOOLKIT_ROOT_DIR}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TARGET_OPTION}")
+
 macro(listSubDir RESULT ROOT_PATH)
     file(GLOB FILES RELATIVE ${ROOT_PATH} *)
     set(${RESULT} "")
