add installation and version check for clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ set(ConcurrencyErrorBenchmarkSuite_VERSION_MINOR 1)
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Debug")
 endif()
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Modules")
 add_subdirectory(OpenMP)
 #add_subdirectory(CUDA)
