replace macro with function

--- a/OpenMP/CMakeLists.txt
+++ b/OpenMP/CMakeLists.txt
@@ -26,7 +26,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TARGET_OPTION}")
 #    message(FATAL_ERROR "${CMAKE_C_COMPILER} doesn't support openmp offloading flags")
 #endif()
 
-macro(listSubDir RESULT ROOT_PATH)
+function(listSubDir RESULT ROOT_PATH)
     file(GLOB FILES RELATIVE ${ROOT_PATH} *)
     set(${RESULT} "")
     foreach(FILE_NAME ${FILES})
@@ -37,12 +37,14 @@ macro(listSubDir RESULT ROOT_PATH)
             list(APPEND ${RESULT} ${FILE_NAME})
         endif()
     endforeach()
-endmacro()
+    set(${RESULT} ${${RESULT}} PARENT_SCOPE)
+endfunction()
 
-macro(removeSuffix RESULT INPUT)
+function(removeSuffix RESULT INPUT)
     string(FIND ${INPUT} "." DOT_POS REVERSE)
     string(SUBSTRING ${INPUT} "0" ${DOT_POS} ${RESULT})
-endmacro()
+    set(${RESULT} ${${RESULT}} PARENT_SCOPE)
+endfunction()
 
 set(SUBDIR_LIST "")
 listSubDir(SUBDIR_LIST ${CMAKE_CURRENT_SOURCE_DIR})
