Update FindClang to make it consistent with the official FindXXX modules. Add Util module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,13 @@ project(ConcurrencyErrorBenchmarkSuite)
 set(ConcurrencyErrorBenchmarkSuite_VERSION_MAJOR 0)
 set(ConcurrencyErrorBenchmarkSuite_VERSION_MINOR 1)
 
-#set default build type
+# set default build type
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Debug")
 endif()
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Modules")
+include(Util)
+
+# each subfolder associates with parallel progrmaming models
 add_subdirectory(OpenMP)
-#add_subdirectory(CUDA)
+add_subdirectory(CUDA)
